fixed Player class more